# elitea-testing-public

./: .gitignore  .mcp.json  CLAUDE.md  LOCAL_SETUP.md  PLAYWRIGHT_SETUP.md  PUBLIC_MIGRATION_RISKS.md  README.md  mkdocs.yml  pyproject.toml
.claude/agents/: failure-investigator.md  ui-test-orchestrator.md
.claude/rules/: api-patterns.md  api-tests.md  mui-patterns.md  page-objects.md  ui-tests.md
.github/: README.md
.github/agents/: qa-orchestrator.md
.github/prompts/: create-test-case.prompt.md
.github/scripts/: provision_secrets.sh
.github/workflows/: delete-stale-branches.yml  docs-build.yml  test-api.yml  test-ui-custom.yml  test-ui-dev.yml  test-ui-next.yml  test-ui-stage2.yml  test-ui.yml
automation/: .env.test.example  CLAUDE.md  FRONTEND_TESTID_SPEC.md  api_auth.py  config.py  conftest.py  pytest.ini  toolkit_configs.py  toolkit_factories.py
automation/api/: __init__.py  client.py
automation/components/: __init__.py  locators.py  mui.py  voice_settings.py
automation/fixtures/: __init__.py  api_fixtures.py  cleanup_fixtures.py  data_fixtures.py  session_fixtures.py
automation/pages/: __init__.py  agent_detail_page.py  agent_form_page.py  agent_page.py  agents_list_page.py  artifacts_page.py  base_page.py  chat_page.py  internal_tools.py  locator_descriptor.py  pipeline_detail_page.py  pipeline_form_page.py  pipelines_list_page.py  (+3 more)
docs/: CONTRIBUTING.md  DOCUMENTATION_SUMMARY.md  UI_TEST_EPICS.md  index.md  requirements.txt
test-data/: README.md  sample-products.csv  sample-users.json
toolkit-tests/: README.md
ui-tests/: README.md
(+3281 files in other folders)
